--- a/res/gamedata_COC/configs/items/items_drugs.ltx
+++ b/res/gamedata_COC/configs/items/items_drugs.ltx
@@ -1,5 +1,5 @@
 ;boosters
-[drug_booster]:booster_script
+[drug_booster]:booster
 $spawn                                   = "food and drugs\drug_booster"
 visual                                   = dynamics\equipments\medical\drug_booster.ogf
 inv_name                                 = st_drug_booster
@@ -20,7 +20,7 @@ inv_weight                               = 0.1
 
 hide_time_wpn = 3
 
-[drug_coagulant]:booster_script
+[drug_coagulant]:booster
 $spawn                                   = "food and drugs\drug_coagulant"
 visual                                   = dynamics\equipments\medical\drug_coagulant.ogf
 inv_name                                 = st_drug_coagulant
@@ -46,7 +46,7 @@ empty_weight                             = 0.01
 
 hide_time_wpn = 3
 
-[drug_psy_blockade]:booster_script
+[drug_psy_blockade]:booster
 $spawn                                   = "food and drugs\drug_psy_blockade"
 visual                                   = dynamics\equipments\medical\drug_psy_blockade.ogf
 inv_name                                 = st_drug_psy_blockade
@@ -72,7 +72,7 @@ empty_weight                             = 0.01
 
 hide_time_wpn = 3
 
-[drug_antidot]:booster_script
+[drug_antidot]:booster
 $spawn                                   = "food and drugs\drug_antidot"
 visual                                   = dynamics\equipments\medical\drug_antidot.ogf
 inv_name                                 = st_drug_antidot
@@ -98,7 +98,7 @@ empty_weight                             = 0.01
 
 hide_time_wpn = 3
 
-[drug_radioprotector]:booster_script
+[drug_radioprotector]:booster
 $spawn                                   = "food and drugs\drug_radioprotector"
 visual                                   = dynamics\equipments\medical\drug_radioprotector.ogf
 inv_name                                 = st_drug_radioprotector
@@ -124,7 +124,7 @@ empty_weight                             = 0.01
 
 hide_time_wpn = 3
 
-[drug_anabiotic]:booster_script
+[drug_anabiotic]:booster
 $spawn                                   = "food and drugs\drug_anabiotic"
 visual                                   = dynamics\equipments\medical\drug_anabiotic.ogf
 inv_name                                 = st_drug_anabiotic
